TS-5096: Lua metrics crashes if the prefix is missing.

Prevent a traffic_manager crash if someone registers a metric with no
prefix. We can't make that metric available in Lua, but we ough not
to crash.